build/log/idf_py_stderr_output_19173
Command: make -j 14 all
/home/catperson/esp/morse_code/main/web_server.c: In function 'root_get_handler':
/home/catperson/esp/morse_code/main/web_server.c:22:77: error: stray '\' in program
   22 |     "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1">\n"
      |                                                                             ^
/home/catperson/esp/morse_code/main/web_server.c:22:79: error: missing terminating " character [-Werror]
   22 |     "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1">\n"
      |                                                                               ^
/home/catperson/esp/morse_code/main/web_server.c:22:79: error: missing terminating " character
/home/catperson/esp/morse_code/main/web_server.c:22:78: error: 'n' undeclared (first use in this function)
   22 |     "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1">\n"
      |                                                                              ^
/home/catperson/esp/morse_code/main/web_server.c:22:78: note: each undeclared identifier is reported only once for each function it appears in
/home/catperson/esp/morse_code/main/web_server.c:22:79: error: expected ')' before string constant
   22 |     "<meta name=\"viewport\" content=\"width=device-width, initial-scale=1">\n"
      |                                                                               ^
      |                                                                               )
   23 |     "<style>\n"
      |     ~~~~~~~~~~~                                                                
/home/catperson/esp/morse_code/main/web_server.c:18:11: note: to match this '('
   18 |   snprintf(response_buf, 4096,
      |           ^
/home/catperson/esp/morse_code/main/web_server.c:54:43: error: missing terminating " character [-Werror]
   54 |     "<input type=\"submit\" value=\"Send">"
      |                                           ^
/home/catperson/esp/morse_code/main/web_server.c:54:43: error: missing terminating " character
/home/catperson/esp/morse_code/main/web_server.c: In function 'submit_get_handler':
/home/catperson/esp/morse_code/main/web_server.c:90:71: error: missing terminating " character [-Werror]
   90 |                      "<meta http-equiv=\"refresh\" content=\"5;url=/">"
      |                                                                       ^
/home/catperson/esp/morse_code/main/web_server.c:90:71: error: missing terminating " character
/home/catperson/esp/morse_code/main/web_server.c:90:70: error: comparison with string literal results in unspecified behavior [-Werror=address]
   90 |                      "<meta http-equiv=\"refresh\" content=\"5;url=/">"
      |                                                                      ^
/home/catperson/esp/morse_code/main/web_server.c:87:22: error: initialization of 'const char *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
   87 |   const char *resp = "<!DOCTYPE html>\n"
      |                      ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:121: esp-idf/main/CMakeFiles/__idf_main.dir/web_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5369: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
